+ Added .tak extension
* Changed default settings
    - Global media keys are now activated by default
    - Media volume keys will now change the system's volume when MPC-HC is
      the foreground application
+ Added a new Zoom option "Auto Fit (large only)"
+ Ticket #1792, Show an OSD message and a status message when a favorite is
  created via the keyboard shortcut
+ Ticket #2134, Added an auto-update feature to periodically check for new
  update. This feature can be enabled on first launch or via the Miscellaneous
  options page. The delay between the checks is also customizable.
+ Ticket #2193, Add PNG support for custom toolbars
+ Added Basque translation
* Ticket #734, A unicode encoding will now be used for the ini file. Old ASCII
  ini files will be automatically converted to unicode. Favorites with unicode
  filenames are now correctly handled when using an ini file
* Ticket #1693, [VSFilter] Remove the feature preventing the screensaver from
  running when VSFilter is active since that's a job for players not for filters
* Ticket #1733/#2029, Include subfolders when opening a folder using the command
  line or via the explorer context menu
* Ticket #2144,2277, Improve the subtitles downloader dialog:
    - the dialog's size and position are now saved
    - the columns' sizes are saved
    - the subtitle list is now fetched from a worker thread (this way the player won't
      lock anymore when the dialog is being opened)
    - reduced flicker
    - tooltips will now be shown for clipped text
* Ticket #2157, Show the [DXVA] indicator even when playback is paused
* Ticket #2163, Improve the "Save As" dialog: the dialog is updated more regularly and
  the units for the sizes and the speed are now automatically adapted to the values
* Ticket #2165, Improve the "Organize Favorites" dialog:
    - the favorites can now be deleted using the delete key or the backspace key
    - the buttons are disabled when they cannot be used