@@ -1156,8 +1156,10 @@ ALIGN 16
 
 INIT_XMM sse
 VECTOR_FMUL
+%if HAVE_AVX
 INIT_YMM avx
 VECTOR_FMUL
+%endif
 
 ;-----------------------------------------------------------------------------
 ; void vector_fmul_reverse(float *dst, const float *src0, const float *src1,
@@ -1198,8 +1200,10 @@ ALIGN 16
 
 INIT_XMM sse
 VECTOR_FMUL_REVERSE
+%if HAVE_AVX
 INIT_YMM avx
 VECTOR_FMUL_REVERSE
+%endif
 
 ;-----------------------------------------------------------------------------
 ; vector_fmul_add(float *dst, const float *src0, const float *src1,
@@ -1231,8 +1235,10 @@ ALIGN 16
 
 INIT_XMM sse
 VECTOR_FMUL_ADD
+%if HAVE_AVX
 INIT_YMM avx
 VECTOR_FMUL_ADD
+%endif
 
 ;-----------------------------------------------------------------------------
 ; void ff_butterflies_float_interleave(float *dst, const float *src0,
