@@ -67,11 +67,6 @@
         #define UINT64_C(x) (x ## ULL)
     #endif
 #endif
-
-#ifdef _MSC_VER
-    #pragma warning(push)
-    #pragma warning(disable: 4244)
-#endif
 // <== End patch MPC
 
 /* misc math functions */
@@ -184,7 +179,7 @@ static av_always_inline av_const int16_t av_clip_int16_c(int a)
 static av_always_inline av_const int32_t av_clipl_int32_c(int64_t a)
 {
     if ((a+0x80000000u) & ~UINT64_C(0xFFFFFFFF)) return (a>>63) ^ 0x7FFFFFFF;
-    else                                         return a;
+    else                                         return (int32_t)a;
 }
 
 /**
@@ -243,7 +238,7 @@ static av_always_inline av_const int av_popcount_c(uint32_t x)
  */
 static av_always_inline av_const int av_popcount64_c(uint64_t x)
 {
-    return av_popcount(x) + av_popcount(x >> 32);
+    return av_popcount((uint32_t)x) + av_popcount(x >> 32);
 }
 
 #define MKTAG(a,b,c,d) ((a) | ((b) << 8) | ((c) << 16) | ((unsigned)(d) << 24))
@@ -367,12 +362,6 @@ static av_always_inline av_const int av_popcount64_c(uint64_t x)
 #ifdef HAVE_AV_CONFIG_H
 #    include "internal.h"
 #endif /* HAVE_AV_CONFIG_H */
-
-// ==> Start patch MPC
-#ifdef _MSC_VER
-    #pragma warning(pop)
-#endif
-// <== End patch MPC
 
 #endif /* AVUTIL_COMMON_H */
 
